--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "this is learning management system",
   "main": "server.js",
   "scripts": {
-    "dev":"tsnd --respawn ./src/server.ts"
+    "dev": "tsnd --respawn ./src/server.ts"
   },
   "author": "Ali Hassan",
   "license": "ISC",
@@ -19,13 +19,17 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.7",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/nodemailer": "^6.4.14",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
